# CV-student-attendance-system

./: CMakeLists.txt  README.md  main.cpp
models/: face_recognizer.yml
sources/: main.cpp
sources/FaceRecognition/: CMakeLists.txt  FaceRecognition.hpp
